<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.fourthline.cling</groupId>
        <artifactId>cling</artifactId>
        <version>2.1.2</version>
    </parent>

    <name>Cling Core</name>
    <artifactId>cling-core</artifactId>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
		<build>
		  <plugins>
		    <plugin>
		      <groupId>org.apache.maven.plugins</groupId>
		      <artifactId>maven-compiler-plugin</artifactId>
		      <version>3.11.0</version> 
		      <configuration>
		        <compilerArgs>
		          <arg>--add-exports</arg>
		          <arg>java.base/sun.net.www.protocol.http=ALL-UNNAMED</arg>
		        </compilerArgs>
		        <source>21</source>
		        <target>21</target>
		      </configuration>
		    </plugin>
		  </plugins>
		</build>
    <dependencies>
        <dependency>
            <groupId>org.seamless</groupId>
            <artifactId>seamless-util</artifactId>
            <version>${seamless.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seamless</groupId>
            <artifactId>seamless-http</artifactId>
            <version>${seamless.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seamless</groupId>
            <artifactId>seamless-xml</artifactId>
            <version>${seamless.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>${jetty.version}</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>${jetty.version}</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-client</artifactId>
            <version>${jetty.version}</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.google.android</groupId>
            <artifactId>android</artifactId>
            <version>${android.version}</version>
            <scope>compile</scope>
            <optional>true</optional>
            <exclusions>
                <!-- Of course, kxml2 is actually used by Android at runtime -->
                <exclusion>
                    <groupId>xpp3</groupId>
                    <artifactId>xpp3</artifactId>
                </exclusion>
                <!-- Don't need these to compile Cling -->
                <exclusion>
                    <groupId>org.khronos</groupId>
                    <artifactId>opengl-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.json</groupId>
                    <artifactId>json</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>xerces</groupId>
                    <artifactId>xmlParserAPIs</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>javax.enterprise</groupId>
            <artifactId>cdi-api</artifactId>
            <version>${cdi.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.kxml</groupId>
            <artifactId>kxml2</artifactId>
            <version>${kxml.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
    		</dependency>
    </dependencies>

</project>